--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,31 +1,19 @@
 doctrine:
     dbal:
+        driver: 'pdo_sqlsrv'
+        host: 'localhost'  # or your SQL Server IP
+        port: '3306'       # Default port for SQL Server
+        dbname: 'G_stock'
+        user: 'HP\Administrator'
+        password: ''
         url: '%env(resolve:DATABASE_URL)%'
-
-        # IMPORTANT: You MUST configure your server version,
-        # either here or in the DATABASE_URL env var (see .env file)
-        #server_version: '16'
-
-        profiling_collect_backtrace: '%kernel.debug%'
-        use_savepoints: true
+        charset: UTF-8
+        options:
+            TrustServerCertificate: true
+            CharacterSet: UTF-8
     orm:
         auto_generate_proxy_classes: true
-        enable_lazy_ghost_objects: true
-        report_fields_where_declared: true
-        validate_xml_mapping: true
-        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
-        identity_generation_preferences:
-            Doctrine\DBAL\Platforms\PostgreSQLPlatform: identity
         auto_mapping: true
-        mappings:
-            App:
-                type: attribute
-                is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
-        controller_resolver:
-            auto_mapping: false
 
 when@test:
     doctrine:
